# danmuji-sdk-rs

./: .danmuji-version  .gitignore  Cargo.toml  LICENSE  README.md  build.ps1
bridge/DanmujiRustBridge/: DanmujiRustBridge.csproj  FfiScope.cs  RustNative.cs
crates/cargo-danmuji/: Cargo.toml  README.md  build.rs
crates/cargo-danmuji/bridge/: RustNative.cs  RustPlugin.cs
crates/cargo-danmuji/src/: bridge.rs  main.rs
crates/danmuji-sdk/: Cargo.toml  README.md
crates/danmuji-sdk/src/: ffi.rs  host.rs  lib.rs  model.rs
example/: Cargo.toml  README.md  build.ps1
example/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
