[workspace]
members = [
    "crates/cargo-danmuji",
    "crates/danmuji-sdk",
    "example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"
repository = "https://github.com/lightsing/danmuji-sdk-rs"
homepage = "https://github.com/lightsing/danmuji-sdk-rs"
