[package]
name = "cargo-danmuji"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**",
    "assets/DanmujiRustBridge.dll",
]

[[bin]]
name = "cargo-danmuji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-cargo = "0.18"
eyre = "0.6"
sha2 = "0.10"
