[package]
name = "cargo-danmuji"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cargo subcommand for building single-file Bilibili Danmuji Rust plugins"
documentation = "https://docs.rs/cargo-danmuji"
readme = "README.md"
keywords = ["bilibili", "danmuji", "cargo", "plugin"]
categories = ["command-line-utilities", "development-tools::build-utils"]
include = [
    "Cargo.toml",
    "README.md",
    "bridge/**",
    "src/**",
]

[[bin]]
name = "cargo-danmuji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-cargo = "0.18"
eyre = "0.6"
sha2 = "0.10"

[lints]
workspace = true
